# claude-deck

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.superpowers/sdd/: phasea-report.md  s1-report.md
docs/superpowers/: notes-cli-facts.md
docs/superpowers/plans/: 2026-07-18-awareness-1a.md  2026-07-18-claude-deck-foundation.md  2026-07-18-claude-deck-tui-foundation.md  2026-07-18-home-and-mouse.md  2026-07-18-reaping.md  2026-07-18-settings.md  2026-07-18-workspace.md
docs/superpowers/specs/: 2026-07-18-awareness-layer-design.md  2026-07-18-claude-deck-design.md  2026-07-18-home-and-mouse-design.md
src/: app.rs  config.rs  home.rs  hooks.rs  icons.rs  keys.rs  lib.rs  main.rs  main.ts  mem.rs  mouse.rs  notify.rs  pty.rs  resume.rs  session.rs  sessions.ts  styles.css  ui.rs  workspace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  pty.rs
src-tauri/src/core/: session.rs
