[package]
name = "claude-deck"
version = "0.1.0"
edition = "2021"
default-run = "claude-deck"

[[bin]]
name = "claude-deck"
path = "src/main.rs"

[[bin]]
name = "cdeck"
path = "src/bin/cdeck.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
uuid = { version = "1", features = ["v4"] }
tui-term = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-rust = "4"
sysinfo = "0.33"
which = "7"
